# ensai-2026

./: exercice_1.py  exercice_3.py  exercice_4.py  fruits.csv
.github/workflows/: build_and_deploy.yml
dbt/transform/: .user.yml  dbt_project.yml  profiles.yml
dbt/transform/models/: dim_actors.sql  dim_directors.sql  movies.sql  sources.yml
dbt/transform/models/stg/: stg_actor.sql  stg_crew.sql  stg_person.sql  stg_ratings.sql  stg_title_basics.sql
imdb/: chat.py  ingest.py  pyproject.toml
prenoms/: api.py  pyproject.toml
terraform/: main.tf
